--- a/styles/style.css
+++ b/styles/style.css
@@ -23,16 +23,16 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
 
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        width: 100vw;
-        background: rgb(50, 50, 50);
-        background-size: 100% 100%;
-    }
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background: rgb(50, 50, 50);
+    background-size: 100% 100%;
 }
 
 overlay {
@@ -49,268 +49,267 @@ overlay {
     opacity: 0;
     visibility: hidden;
     transition: opacity var(--transition-duration), visibility 0s var(--transition-duration);
+}
 
-    .modal {
-        position: relative;
-        padding: 1rem;
+.modal {
+    position: relative;
+    padding: 1rem;
+    margin: 0px;
+    border-radius: 8px;
+    background: rgba(120, 139, 151, 0.973);
+    box-shadow: 0 6px 10px rgb(0, 0, 0);
+    text-align: center;
+    width: 30%;
+    height: 50%;
+    z-index: 25;
+    transform: scale(0.7);
+    transition: transform var(--transition-duration) ease;
+}
+
+#close-modal,
+#close-modal-cards {
+    position: absolute;
+    top: -3%;
+    right: -3%;
+    font-size: 20px;
+    text-align: center;
+    font-weight: 900;
+    border-radius: 50%;
+    border: 3px rgba(25, 0, 0, 0.656) solid;
+    color: rgba(26, 26, 26, 0.908);
+    background: rgb(138, 0, 0);
+    padding: 8px 16px;
+    transform: scale(0.95);
+    transition: transform 0.19s linear;
+}
+
+#close-modal:hover,
+#close-modal-cards:hover {
+    color: rgb(0, 0, 0);
+    background: rgb(114, 0, 0);
+}
+
+#close-modal:active,
+#close-modal-cards:active {
+    transform: scale(0.55);
+    transition: transform 0.19s linear;
+}
+
+.modal h3 {
+    margin: 0px;
+    font-family: "Nexa";
+    text-align: left;
+}
+
+.modal h2 {
+    font-family: "Nexa";
+}
+
+.modal p {
+    font-family: "Dreams";
+    font-weight: 600;
+}
+
+modes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    button:first-child {
+        margin-top: 20px;
+    }
+
+    .modebtn {
+        font-family: "Comforta-Bold";
+        text-align: center;
+        font-size: 20px;
+        padding: 8px;
+        border: 3px rgba(0, 0, 0, 0.355) solid;
+        background: rgba(0, 0, 0, 0.200);
+        color: rgba(255, 255, 255, 0.908);
+        border-radius: 25px 25px;
+        width: 180px;
+        height: 70px;
+        cursor: pointer;
+
+        &.modebtn:hover {
+            background: rgba(0, 0, 0, 0.640);
+        }
+    }
+}
+
+.modal-explanation {
+    position: absolute;
+    overflow: auto;
+    background: rgba(120, 139, 151, 0.973);
+    padding: 20px;
+    border-radius: 10px;
+    top: 6%;
+    right: 15%;
+    width: 42%;
+    height: 85%;
+    opacity: 0;
+    visibility: hidden;
+    box-shadow: 0 6px 10px rgb(0, 0, 0);
+    text-align: center;
+    transform: translateX(20%);
+    transition: transform var(--transition-duration-short),
+        opacity var(--transition-duration-short),
+        visibility 0s var(--transition-duration-short);
+}
+
+#close-modal-explanation {
+    position: absolute;
+    left: -16.5%;
+    height: 90%;
+    width: 30%;
+    border: none;
+    cursor: pointer;
+    border-radius: 70%;
+    padding: 8px 13px;
+    font-size: 25px;
+    text-align: end;
+    font-weight: 900;
+    color: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0);
+    transition: color 0.25s ease, background 0.25s ease;
+}
+
+#close-modal-explanation:hover,
+#cntrl-panel:hover {
+    color: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.3);
+}
+
+c {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    justify-content: center;
+
+    & h2 {
+        font-family: "Nexa";
+    }
+
+    & h3 {
         margin: 0px;
-        border-radius: 8px;
-        background: rgba(120, 139, 151, 0.973);
+        font-family: "Nexa";
+        text-align: left;
+    }
+
+    & p {
+        font-family: "Comforta-bold";
+    }
+}
+
+flash-cards {
+    position: fixed;
+    align-items: center;
+    background-color: rgb(88, 136, 139);
+    box-shadow: 0 6px 10px rgb(0, 0, 0);
+    border-radius: 10px;
+    padding: 10px;
+    width: 40vw;
+    height: 70vh;
+    z-index: 100;
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.7);
+    transition: transform var(--transition-duration), opacity var(--transition-duration), visibility 0s var(--transition-duration);
+
+    btn-panel-modal {
+        position: absolute;
+        overflow: hidden;
+        gap: 10px;
+        width: 25%;
+        height: 55%;
+        left: -27%;
+        padding: 20px;
+        opacity: 1;
+        visibility: visible;
         box-shadow: 0 6px 10px rgb(0, 0, 0);
         text-align: center;
-        width: 30%;
-        height: 50%;
-        z-index: 25;
-        transform: scale(0.7);
-        transition: transform var(--transition-duration) ease;
+        transform: translateX(0%);
+        transition: transform var(--transition-duration-short),
+            opacity var(--transition-duration-short),
+            visibility 0s var(--transition-duration-short);
+        background: linear-gradient(135deg, rgba(0, 238, 255, 0.1), rgba(0, 0, 0, 0));
+        backdrop-filter: blur(15px);
+        border-radius: 20px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
 
-        #close-modal {
-            position: absolute;
-            top: -3%;
-            right: -3%;
-            font-size: 20px;
+        h2 {
             text-align: center;
-            font-weight: 900;
-            border-radius: 50%;
-            border: 3px rgba(25, 0, 0, 0.656) solid;
-            color: rgba(26, 26, 26, 0.908);
-            background: rgb(138, 0, 0);
-            padding: 8px 16px;
-            transform: scale(0.95);
-            transition: transform 0.19s linear;
-
-            &:hover {
-                color: rgb(0, 0, 0);
-                background: rgb(114, 0, 0);
-            }
-
-            &:active {
-                transform: scale(0.55);
-                transition: transform 0.19s linear;
-            }
         }
 
-        & h3 {
-            margin: 0px;
-            font-family: "Nexa";
-            text-align: left;
-        }
-
-        & h2 {
-            font-family: "Nexa";
-        }
-
-        & p {
-            font-family: "Dreams";
-            font-weight: 600;
-        }
-
-        modes {
+        btn-c {
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
-            gap: 10px;
+            justify-content: center;
 
-            button:first-child {
-                margin-top: 20px;
-            }
-
-            .modebtn {
+            .ctr {
                 font-family: "Comforta-Bold";
                 text-align: center;
                 font-size: 20px;
+                margin: 10px;
                 padding: 8px;
                 border: 3px rgba(0, 0, 0, 0.355) solid;
                 background: rgba(0, 0, 0, 0.200);
                 color: rgba(255, 255, 255, 0.908);
                 border-radius: 25px 25px;
-                width: 180px;
+                width: 128px;
                 height: 70px;
                 cursor: pointer;
 
-                &.modebtn:hover {
+                &#sort-words-ctr {
+                    font-size: 26px;
+                }
+
+                &#shuffle-words-ctr:hover,
+                #sort-words-ctr:hover {
                     background: rgba(0, 0, 0, 0.640);
                 }
             }
-        }
 
-        .modal-explanation {
-            position: absolute;
-            overflow: auto;
-            background: rgba(120, 139, 151, 0.973);
-            padding: 20px;
-            border-radius: 10px;
-            top: 6%;
-            right: 15%;
-            width: 42%;
-            height: 85%;
-            opacity: 0;
-            visibility: hidden;
-            box-shadow: 0 6px 10px rgb(0, 0, 0);
-            text-align: center;
-            transform: translateX(20%);
-            transition: transform var(--transition-duration-short),
-                opacity var(--transition-duration-short),
-                visibility 0s var(--transition-duration-short);
-
-            #close-modal-explanation {
+            #cntrl-panel {
                 position: absolute;
-                left: -16.5%;
+                overflow: hidden;
+                right: -15%;
+                top: 15px;
                 height: 90%;
                 width: 30%;
                 border: none;
-                cursor: pointer;
                 border-radius: 70%;
-                padding: 8px 13px;
+                padding: 8px 8px;
                 font-size: 25px;
-                text-align: end;
+                text-align: start;
                 font-weight: 900;
-                color: rgba(0, 0, 0, 0.2);
+                cursor: pointer;
+                color: rgba(255, 255, 255, 0.3);
                 background: rgba(0, 0, 0, 0);
                 transition: color 0.25s ease, background 0.25s ease;
-
-                &:hover {
-                    color: rgba(0, 0, 0, 0.5);
-                    background: rgba(0, 0, 0, 0.2);
-                }
-            }
-
-            c {
-                display: flex;
-                gap: 15px;
-                flex-direction: column;
-                justify-content: center;
-
-                & h2 {
-                    font-family: "Nexa";
-                }
-
-                & h3 {
-                    margin: 0px;
-                    font-family: "Nexa";
-                    text-align: left;
-                }
-
-                & p {
-                    font-family: "Comforta-bold";
-                }
             }
         }
     }
 
-    flash-cards {
-        position: fixed;
-        align-items: center;
-        background-color: rgb(88, 136, 139);
-        box-shadow: 0 6px 10px rgb(0, 0, 0);
-        border-radius: 10px;
-        padding: 10px;
-        width: 40vw;
-        height: 70vh;
-        z-index: 100;
-        opacity: 0;
-        visibility: hidden;
-        transform: scale(0.7);
-        transition: transform var(--transition-duration), opacity var(--transition-duration), visibility 0s var(--transition-duration);
-
-        btn-panel-modal {
-            position: absolute;
-            overflow: hidden;
-            gap: 10px;
-            width: 25%;
-            height: 55%;
-            left: -27%;
-            padding: 20px;
-            opacity: 1;
-            visibility: visible;
-            box-shadow: 0 6px 10px rgb(0, 0, 0);
+    modal-text {
+        h2 {
             text-align: center;
-            transform: translateX(0%);
-            transition: transform var(--transition-duration-short),
-                opacity var(--transition-duration-short),
-                visibility 0s var(--transition-duration-short);
-            background: linear-gradient(135deg, rgba(0, 238, 255, 0.1), rgba(0, 0, 0, 0));
-            backdrop-filter: blur(15px);
-            border-radius: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.18);
-            box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.3);
-
-            h2 {
-                text-align: center;
-            }
-
-            btn-c {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-
-                .ctr {
-                    font-family: "Comforta-Bold";
-                    text-align: center;
-                    font-size: 20px;
-                    margin: 10px;
-                    padding: 8px;
-                    border: 3px rgba(0, 0, 0, 0.355) solid;
-                    background: rgba(0, 0, 0, 0.200);
-                    color: rgba(255, 255, 255, 0.908);
-                    border-radius: 25px 25px;
-                    width: 128px;
-                    height: 70px;
-                    cursor: pointer;
-
-                    &#sort-words-ctr {
-                        font-size: 26px;
-                    }
-
-                    &#shuffle-words-ctr:hover,
-                    #sort-words-ctr:hover {
-                        background: rgba(0, 0, 0, 0.640);
-                    }
-                }
-
-                #cntrl-panel {
-                    position: absolute;
-                    overflow: hidden;
-                    right: -15%;
-                    top: 15px;
-                    height: 90%;
-                    width: 30%;
-                    border: none;
-                    border-radius: 70%;
-                    padding: 8px 8px;
-                    font-size: 25px;
-                    text-align: start;
-                    font-weight: 900;
-                    cursor: pointer;
-                    color: rgba(255, 255, 255, 0.3);
-                    background: rgba(0, 0, 0, 0);
-                    transition: color 0.25s ease, background 0.25s ease;
-
-                    &:hover {
-                        color: rgba(255, 255, 255, 0.6);
-                        background: rgba(0, 0, 0, 0.3);
-                    }
-                }
-            }
+            font-size: 44px;
+            font-family: "Nexa";
+            padding: 0;
+            margin: 0;
         }
+    }
 
-        modal-text {
-            h2 {
-                text-align: center;
-                font-size: 44px;
-                font-family: "Nexa";
-                padding: 0;
-                margin: 0;
-            }
-        }
-
-        flash-card-container {
-            position: relative;
-            display: none;
-            height: 100%;
-        }
+    flash-card-container {
+        position: relative;
+        display: none;
+        height: 100%;
     }
 }
 
